--- a/src/CQRS2012.Gui/web.config
+++ b/src/CQRS2012.Gui/web.config
@@ -38,7 +38,18 @@
     <membership>
       <providers>
         <clear />
-        <add name="AspNetSqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider" connectionStringName="ApplicationServices" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" applicationName="/" />
+        <add name="AspNetSqlMembershipProvider" 
+             type="System.Web.Security.SqlMembershipProvider" 
+             connectionStringName="ApplicationServices" 
+             enablePasswordRetrieval="false" 
+             enablePasswordReset="true" 
+             requiresQuestionAndAnswer="false"
+             requiresUniqueEmail="false" 
+             maxInvalidPasswordAttempts="5" 
+             minRequiredPasswordLength="6" 
+             minRequiredNonalphanumericCharacters="0" 
+             passwordAttemptWindow="10" 
+             applicationName="/" />
       </providers>
     </membership>
 
